- added VAqua13 L&F - updated pascal files syntax - added iTerm2 terminal supprt - fixed F1-menu